# Sentivest

./: .gitignore  Cargo.toml  main.py  readme.md
fastxml/: Cargo.toml
sec_filings/: GOOGL_10K.txt  TSLA_10K.txt
src/: company_tickers.json  finbert.py  io.rs  litterman.rs  main.rs  optimizer.rs  parser.rs
