[package]
name = "sentivest"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.14", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version="1.44.1", features=["full"] }
yahoo_finance_api = "3.0.0"
serde = { version = "1.0", features = ["derive"] }  # For JSON handling
serde_json = "1.0"
chrono = "0.4.40"
time = "0.3.40"
regex = "1.11.1"
rand = "0.9.0"
pyo3 = "0.24.0"
numpy = "0.24.0"
